Docker image based on adoptopenjdk:jdk-11.0.9_11-alpine-slim