@@ -1,26 +1,10 @@
-FROM alpine:latest as packager
+# https://stackoverflow.com/questions/46057625/externalising-spring-boot-properties-when-deploying-to-docker
+FROM adoptopenjdk:jdk-11.0.9_11-alpine-slim
 COPY qemu-arm-static /usr/bin/qemu-arm-static
-
-RUN apk --no-cache add openjdk11-jdk openjdk11-jmods
-
-ENV JAVA_MINIMAL="/opt/java-minimal"
-
-# build minimal JRE
-RUN /usr/lib/jvm/java-11-openjdk/bin/jlink \
-    --verbose \
-    --add-modules \
-        java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
-    --compress 2 --strip-debug --no-header-files --no-man-pages \
-    --release-info="add:IMPLEMENTOR=radistao:IMPLEMENTOR_VERSION=radistao_JRE" \
-    --output "$JAVA_MINIMAL"
-
-FROM alpine:latest
-
-ENV JAVA_HOME=/opt/java-minimal
-ENV PATH="$PATH:$JAVA_HOME/bin"
-
-COPY --from=packager "$JAVA_HOME" "$JAVA_HOME"
+MAINTAINER knx-db@devtom.de
+VOLUME /tmp
+EXPOSE 8080
 ARG JAR_FILE
-COPY ${JAR_FILE} "/app.jar"
-
+COPY ${JAR_FILE} app.jar
+RUN mkdir /data
 ENTRYPOINT ["java","-jar","/app.jar"]
